htaccess fix and visual improvements
-Fixed htaccess routing
-Fixed overlapping session timer
-Removed Workout name and type from logger container for visibility improvement
-Other visual improvements

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,19 @@
   flex: auto;
   justify-content: center;
   align-items: center;
-  font-size: 1.2rem;
 }
-
+@media (min-width: 800)
+{
+  .app-container {
+  font-size: 1.2rem;
+  }
+}
+@media (max-width: 1000)
+{
+  .app-container {
+  font-size: 0.9rem;
+  }
+}
 body {
   background-color: #011728;
   font-family: "Noto Sans";
